--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -75,13 +75,13 @@
     {
       "data": {
         "stringId": 304,
-        "text": "Total DBALL burned since launch"
+        "text": "Total COAL burned since launch"
       }
     },
     {
       "data": {
         "stringId": 306,
-        "text": "See the Kitchen"
+        "text": "See the Mines"
       }
     },
     {
@@ -123,13 +123,13 @@
     {
       "data": {
         "stringId": 320,
-        "text": "Stake LP tokens to earn DBALL"
+        "text": "Stake LP tokens to earn COAL"
       }
     },
     {
       "data": {
         "stringId": 322,
-        "text": "Stake DBALL, get SYRUP."
+        "text": "Stake COAL, get SYRUP."
       }
     },
     {
@@ -153,7 +153,7 @@
     {
       "data": {
         "stringId": 334,
-        "text": "Every time you stake and unstake DBALL tokens, the contract will automatically harvest DBALL rewards for you!"
+        "text": "Every time you stake and unstake COAL tokens, the contract will automatically harvest COAL rewards for you!"
       }
     },
     {
@@ -219,7 +219,7 @@
     {
       "data": {
         "stringId": 358,
-        "text": "DBALL price"
+        "text": "COAL price"
       }
     },
     {
@@ -243,7 +243,7 @@
     {
       "data": {
         "stringId": 380,
-        "text": "1 DBALL = 1 SYRUP"
+        "text": "1 COAL = 1 SYRUP"
       }
     },
     {
@@ -291,7 +291,7 @@
     {
       "data": {
         "stringId": 400,
-        "text": "SYRUP holders proportionally split 25% of DBALL block emissions each day (10 DBALL per block), Rewards are distributed each block."
+        "text": "SYRUP holders proportionally split 25% of COAL block emissions each day (10 COAL per block), Rewards are distributed each block."
       }
     },
     {
@@ -351,13 +351,13 @@
     {
       "data": {
         "stringId": 424,
-        "text": "%num% DBALL"
+        "text": "%num% COAL"
       }
     },
     {
       "data": {
         "stringId": 426,
-        "text": "Spend DBALL to buy tickets, contributing to the lottery pot. Ticket purchases end approx. 30 minutes before lottery. Win prizes if 2, 3, or 4 of your ticket numbers match the winning numbers and their positions! Good luck!"
+        "text": "Spend COAL to buy tickets, contributing to the lottery pot. Ticket purchases end approx. 30 minutes before lottery. Win prizes if 2, 3, or 4 of your ticket numbers match the winning numbers and their positions! Good luck!"
       }
     },
     {
@@ -435,19 +435,19 @@
     {
       "data": {
         "stringId": 454,
-        "text": "%num% DBALL Available"
+        "text": "%num% COAL Available"
       }
     },
     {
       "data": {
         "stringId": 456,
-        "text": "Your amount must be a multiple of 10 DBALL"
+        "text": "Your amount must be a multiple of 10 COAL"
       }
     },
     {
       "data": {
         "stringId": 458,
-        "text": "1 Ticket = 10 DBALL"
+        "text": "1 Ticket = 10 COAL"
       }
     },
     {
@@ -495,7 +495,7 @@
     {
       "data": {
         "stringId": 478,
-        "text": "Ticket purchases are final. Your DBALL cannot be returned to you after buying tickets."
+        "text": "Ticket purchases are final. Your COAL cannot be returned to you after buying tickets."
       }
     },
     {
@@ -507,7 +507,7 @@
     {
       "data": {
         "stringId": 482,
-        "text": "DBALL prizes to be claimed"
+        "text": "COAL prizes to be claimed"
       }
     },
     {
@@ -543,13 +543,13 @@
     {
       "data": {
         "stringId": 494,
-        "text": "Approve DBALL"
+        "text": "Approve COAL"
       }
     },
     {
       "data": {
         "stringId": 496,
-        "text": "SYRUP holders proportionally split 40% of DBALL block emissions each day (10 DBALL per block), Rewards are distributed each block."
+        "text": "SYRUP holders proportionally split 40% of COAL block emissions each day (10 COAL per block), Rewards are distributed each block."
       }
     },
     {
@@ -567,19 +567,19 @@
     {
       "data": {
         "stringId": 504,
-        "text": "You\u2019ll pay for the new tokens using DBALL-BNB LP tokens, which means you need to stake equal amounts of DBALL and BNB in a liquidity pool to take part."
+        "text": "You\u2019ll pay for the new tokens using COAL-BNB LP tokens, which means you need to stake equal amounts of COAL and BNB in a liquidity pool to take part."
       }
     },
     {
       "data": {
         "stringId": 506,
-        "text": "Get DBALL-BNB LP >"
+        "text": "Get COAL-BNB LP >"
       }
     },
     {
       "data": {
         "stringId": 508,
-        "text": "The project gets the BNB, Dragon Ball Finance burns the DBALL."
+        "text": "The project gets the BNB, Dragon Ball Finance burns the COAL."
       }
     },
     {
@@ -645,49 +645,49 @@
     {
       "data": {
         "stringId": 534,
-        "text": "DBALL Stats"
+        "text": "COAL Stats"
       }
     },
     {
       "data": {
         "stringId": 536,
-        "text": "Total DBALL Supply"
+        "text": "Total COAL Supply"
       }
     },
     {
       "data": {
         "stringId": 538,
-        "text": "Total DBALL Burned"
+        "text": "Total COAL Burned"
       }
     },
     {
       "data": {
         "stringId": 540,
-        "text": "New DBALL\/block"
+        "text": "New COAL\/block"
       }
     },
     {
       "data": {
         "stringId": 542,
-        "text": "Farms & Staking"
+        "text": "Mines & Nodes"
       }
     },
     {
       "data": {
         "stringId": 544,
-        "text": "DBALL to Harvest"
+        "text": "COAL to Harvest"
       }
     },
     {
       "data": {
         "stringId": 546,
-        "text": "DBALL in Wallet"
+        "text": "COAL in Wallet"
       }
     },
     {
       "data": {
         "stringId": 548,
-        "text": "Collecting DBALL"
+        "text": "Collecting COAL"
       }
     },
     {
@@ -699,7 +699,7 @@
     {
       "data": {
         "stringId": 552,
-        "text": "DBALL to Collect"
+        "text": "COAL to Collect"
       }
     },
     {
@@ -765,7 +765,7 @@
     {
       "data": {
         "stringId": 580,
-        "text": "Stake DBALL to earn new tokens."
+        "text": "Stake COAL to earn new tokens."
       }
     },
     {
@@ -783,7 +783,7 @@
     {
       "data": {
         "stringId": 586,
-        "text": "DBALL to burn (USD)"
+        "text": "COAL to burn (USD)"
       }
     },
     {
@@ -795,7 +795,7 @@
     {
       "data": {
         "stringId": 590,
-        "text": "\u2b50\ufe0f Every time you stake and unstake LP tokens, the contract will automatically harvest DBALL rewards for you!"
+        "text": "\u2b50\ufe0f Every time you stake and unstake LP tokens, the contract will automatically harvest COAL rewards for you!"
       }
     },
     {
@@ -813,13 +813,13 @@
     {
       "data": {
         "stringId": 596,
-        "text": "Buy DBALL and BNB tokens"
+        "text": "Buy COAL and BNB tokens"
       }
     },
     {
       "data": {
         "stringId": 598,
-        "text": "Get DBALL-BNB LP tokens by adding DBALL and BNB liquidity"
+        "text": "Get COAL-BNB LP tokens by adding COAL and BNB liquidity"
       }
     },
     {
@@ -831,7 +831,7 @@
     {
       "data": {
         "stringId": 602,
-        "text": "While the sale is live, commit your DBALL-LP tokens to buy the IFO tokens"
+        "text": "While the sale is live, commit your COAL-LP tokens to buy the IFO tokens"
       }
     },
     {
@@ -867,7 +867,7 @@
     {
       "data": {
         "stringId": 614,
-        "text": "Trade in for DBALL, or keep for your collection!"
+        "text": "Trade in for COAL, or keep for your collection!"
       }
     },
     {
@@ -909,7 +909,7 @@
     {
       "data": {
         "stringId": 628,
-        "text": "When you trade in this NFT to receive DBALL, you will lose access to it forever!"
+        "text": "When you trade in this NFT to receive COAL, you will lose access to it forever!"
       }
     },
     {
@@ -939,7 +939,7 @@
     {
       "data": {
         "stringId": 638,
-        "text": "Winners can trade in their NFTs for a DBALL value until the expiry date written below. If you don't trade in your NFT by then, don\u2019t worry: you\u2019ll still keep it in your wallet!"
+        "text": "Winners can trade in their NFTs for a COAL value until the expiry date written below. If you don't trade in your NFT by then, don\u2019t worry: you\u2019ll still keep it in your wallet!"
       }
     },
     {
@@ -981,7 +981,7 @@
     {
       "data": {
         "stringId": 654,
-        "text": "Trade in for DBALL"
+        "text": "Trade in for COAL"
       }
     },
     {
@@ -1107,7 +1107,7 @@
     {
       "data": {
         "stringId": 696,
-        "text": "Stake LP tokens to earn DBALL"
+        "text": "Stake LP tokens to earn COAL"
       }
     },
     {
@@ -1149,13 +1149,13 @@
     {
       "data": {
         "stringId": 708,
-        "text": "The DBALL Lottery"
+        "text": "The COAL Lottery"
       }
     },
     {
       "data": {
         "stringId": 710,
-        "text": "Buy tickets with DBALL"
+        "text": "Buy tickets with COAL"
       }
     },
     {
@@ -1209,7 +1209,7 @@
     {
       "data": {
         "stringId": 10000,
-        "text": "Deposit Fee will be used to buyback DBALL and burn them 🔥"
+        "text": "Deposit Fee will be used to buyback COAL and burn them 🔥"
       }
     },
     {
@@ -1221,7 +1221,7 @@
     {
       "data": {
         "stringId": 10002,
-        "text": "Stake tokens to earn DBALL"
+        "text": "Stake tokens to earn COAL"
       }
     },
     {
